--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-flask
-pandas
-numpy
-scikit-learn
-gunicorn
+Flask==3.0.0
+pandas==2.1.4
+numpy==1.26.2
+scikit-learn==1.3.2
+gunicorn==21.2.0
+joblib==1.3.2
